--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -51,6 +51,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir starten mit der diskriptiven Analyse der Daten, dafür verwenden wir discrbe Funktion der Pandas Library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(data)\n",
+    "data.describe().T"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -335,13 +352,20 @@
    "source": [
     "da"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "project",
+   "display_name": "introduction-data-science",
    "language": "python",
-   "name": "python3"
+   "name": "introduction-data-science"
   },
   "language_info": {
    "codemirror_mode": {
@@ -353,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
