LazyRegressor für Model Selection?

--- a/project/model-baseline-and-data-preparation.ipynb
+++ b/project/model-baseline-and-data-preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "cnt              4621.000000  6145.250000  32472.000000  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "[132 rows x 17 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "638                    0   26506        5966  32472  "
       ]
      },
-     "execution_count": 142,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1091,7 @@
        "291                    0     637        4111  4748  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
        "5                      0      82        1518  1600  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,18 +1309,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, ElasticNetCV\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,7 +1337,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = [LinearRegression(), Lasso(), Ridge(), ElasticNetCV()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(model):\n",
+    "    model.fit(X_train, Y_train)\n",
+    "    score = model.score(X_train, Y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    return [repr(model), score, model.intercept_,\n",
+    "            mean_squared_error(Y_test, y_pred),\n",
+    "            mean_absolute_error(Y_test, y_pred),\n",
+    "            r2_score(Y_test, y_pred)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 379,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['LinearRegression()', 0.32387059287926256, 4705.011666666666, 1271897.8688349018, 802.4116806431485, 0.6668058481927883]\n",
+      "['Lasso()', 0.3238601911496336, 4705.011666666666, 1268107.4602849048, 802.7110359585034, 0.6677988068200214]\n",
+      "['Ridge()', 0.3238563297186654, 4705.011666666666, 1267480.5857651758, 802.5482083589465, 0.6679630267067032]\n",
+      "['ElasticNetCV()', 0.2496911038154701, 4705.011666666666, 1303977.376504866, 945.560143505863, 0.6584021039847114]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model in models:\n",
+    "    print(evaluate_model(model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1414,7 @@
        "4705.011666666666"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1437,7 @@
        "         93.93007535])"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1492,7 @@
        "1271897.8688349018"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,49 +1503,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "802.4116806431485"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_absolute_error\n",
-    "mean_absolute_error(Y_test, y_pred)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6668058481927883"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import r2_score\n",
-    "r2_score(Y_test, y_pred)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1528,7 @@
        "<Axes: xlabel='cnt'>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     },
