--- a/project/model functions.ipynb
+++ b/project/model functions.ipynb
@@ -1033,6 +1033,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 0.1,\n",
+       " 0.29799103094887935,\n",
+       " 0.7749666216992879,\n",
+       " 859017.1007653293,\n",
+       " 664.356030931713]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_model(1, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
@@ -1210,13 +1235,6 @@
    "source": [
     "results.sort_values(\"R squared\", ascending=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
