--- a/project/model functions.ipynb
+++ b/project/model functions.ipynb
@@ -1230,8 +1230,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Das originale Modell hatte einen R² von 0.6 -> ~46% Verbesserung <br>\n",
-    "MAE war ~802 -> ~40% Reduktion"
+    "Das originale Modell hatte einen R² von 0.6 -> 0.88 <br>\n",
+    "MAE war ~802 -> 507"
    ]
   },
   {
