--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -4,8 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO: \n",
-    "    - define more functions for EDA"
+    "# TODO:\n",
+    "    - head\n",
+    "    - info\n",
+    "    - data dict (types, e.g. nominal, categorial)\n",
+    "    - matrix (missing values)\n",
+    "    - bar (missing values)\n",
+    "    - box (numeric, deviation)\n",
+    "    - bar/mosaic/ (categorial, deviation)\n",
+    "    - predictor/feature correlation (heatmap/scatter)\n",
+    "    - histogram (skewed/deviation)\n"
    ]
   },
   {
@@ -14,8 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import idstools\n",
-    "import pandas as pd"
+    "import idstools.data_explorer as idsde"
    ]
   },
   {
@@ -30,15 +37,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "data_explorer_config = {\n",
-    "    \"console_output\": True,\n",
-    "    \"input\": {\"file\": {\"path\": data, \"type\": \"csv\", \"sep\": \";\"}},\n",
-    "    \"split_data\": False,\n",
-    "    \"discriptiv_analysis\": True\n",
-    "    }"
+    "data_explorer_config = {\"input_file\": {\"path\": data, \"type\": \"csv\", \"sep\": \";\"}, \"output_path\": \"../results/\"}"
    ]
   },
   {
@@ -47,38 +51,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_explorer = idstools.data_explorer.data_explorer(config=data_explorer_config)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Wir starten mit der diskriptiven Analyse der Daten, dafür verwenden wir discrbe Funktion der Pandas Library."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(data)\n",
-    "data.describe().T"
+    "data_explorer = idsde.data_explorer(data_explorer_config)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "da = data_explorer.discriptive_analysis()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -344,13 +322,226 @@
        "cnt              53021.00  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "da"
+    "data_explorer.descriptive_analysis()\n",
+    "data_explorer.description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir starten mit der diskriptiven Analyse der Daten, dafür verwenden wir discrbe Funktion der Pandas Library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import idstools.data_preparation as dp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = \"/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_test.csv\"\n",
+    "train_data = \"/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_preparation_config = {\n",
+    "    \"input_file\": {\n",
+    "        \"path\": train_data,\n",
+    "        \"type\": \"csv\",\n",
+    "        \"sep\": \";\"\n",
+    "    },\n",
+    "    \"output_path\": None,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_preparation = dp.data_preparation(config=data_preparation_config)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import pandas as pd\n",
+    "\n",
+    "def get_wday_by_date(df, date_column, weekday_column):\n",
+    "    # Define the weekday shift\n",
+    "    weekday_shift = {\n",
+    "        6: 0,\n",
+    "        0: 1,\n",
+    "        1: 2,\n",
+    "        2: 3,\n",
+    "        3: 4,\n",
+    "        4: 5,\n",
+    "        5: 6\n",
+    "    }\n",
+    "\n",
+    "    # Convert the date column to datetime\n",
+    "    df[date_column] = pd.to_datetime(df[date_column], format=\"%d.%m.%Y\")\n",
+    "\n",
+    "    # Calculate the weekday and map it\n",
+    "    df[weekday_column] = df[date_column].dt.dayofweek.map(weekday_shift)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_config = {\n",
+    "        \"Imputer\": [\n",
+    "            {\n",
+    "                \"target\": \"hum\",\n",
+    "                \"config\": {\n",
+    "                    \"strategy\": \"mean\"\n",
+    "                }\n",
+    "            }\n",
+    "        ],\n",
+    "        \"GenericDataFrameTransformer\": [\n",
+    "        {\n",
+    "            \"transform_func\": get_wday_by_date,\n",
+    "            \"config\": {\n",
+    "                \"data_column\": \"dteday\",\n",
+    "                \"weekday_column\": \"weekday\"\n",
+    "            }\n",
+    "        }\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "            {\n",
+    "                \"target\": \"dteday\",\n",
+    "                \"config\": {\n",
+    "                    \"source\": \"module\",\n",
+    "                    \"module\": \"pandas\",\n",
+    "                    \"function\": \"to_datetime\",\n",
+    "                    \"args\": {\n",
+    "                        \"format\": \"%d.%m.%Y\"\n",
+    "                    },\n",
+    "                    \"axis\": 1\n",
+    "                }\n",
+    "            },"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;Imputer&#x27;,\n",
+       "                 Imputer(config=[{&#x27;config&#x27;: {&#x27;strategy&#x27;: &#x27;mean&#x27;},\n",
+       "                                  &#x27;target&#x27;: &#x27;hum&#x27;}])),\n",
+       "                (&#x27;OneHotEncoder&#x27;, None), (&#x27;FeatureDropper&#x27;, None),\n",
+       "                (&#x27;GenericDataFrameTransformer&#x27;,\n",
+       "                 GenericDataFrameTransformer(config=[{&#x27;config&#x27;: {&#x27;data_column&#x27;: &#x27;dteday&#x27;,\n",
+       "                                                                 &#x27;weekday_column&#x27;: &#x27;weekday&#x27;},\n",
+       "                                                      &#x27;transform_func&#x27;: &#x27;get_wday_by_date&#x27;}]))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;Imputer&#x27;,\n",
+       "                 Imputer(config=[{&#x27;config&#x27;: {&#x27;strategy&#x27;: &#x27;mean&#x27;},\n",
+       "                                  &#x27;target&#x27;: &#x27;hum&#x27;}])),\n",
+       "                (&#x27;OneHotEncoder&#x27;, None), (&#x27;FeatureDropper&#x27;, None),\n",
+       "                (&#x27;GenericDataFrameTransformer&#x27;,\n",
+       "                 GenericDataFrameTransformer(config=[{&#x27;config&#x27;: {&#x27;data_column&#x27;: &#x27;dteday&#x27;,\n",
+       "                                                                 &#x27;weekday_column&#x27;: &#x27;weekday&#x27;},\n",
+       "                                                      &#x27;transform_func&#x27;: &#x27;get_wday_by_date&#x27;}]))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Imputer</label><div class=\"sk-toggleable__content\"><pre>Imputer(config=[{&#x27;config&#x27;: {&#x27;strategy&#x27;: &#x27;mean&#x27;}, &#x27;target&#x27;: &#x27;hum&#x27;}])</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">None</label><div class=\"sk-toggleable__content\"><pre>None</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">None</label><div class=\"sk-toggleable__content\"><pre>None</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GenericDataFrameTransformer</label><div class=\"sk-toggleable__content\"><pre>GenericDataFrameTransformer(config=[{&#x27;config&#x27;: {&#x27;data_column&#x27;: &#x27;dteday&#x27;,\n",
+       "                                                &#x27;weekday_column&#x27;: &#x27;weekday&#x27;},\n",
+       "                                     &#x27;transform_func&#x27;: &#x27;get_wday_by_date&#x27;}])</pre></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "Pipeline(steps=[('Imputer',\n",
+       "                 Imputer(config=[{'config': {'strategy': 'mean'},\n",
+       "                                  'target': 'hum'}])),\n",
+       "                ('OneHotEncoder', None), ('FeatureDropper', None),\n",
+       "                ('GenericDataFrameTransformer',\n",
+       "                 GenericDataFrameTransformer(config=[{'config': {'data_column': 'dteday',\n",
+       "                                                                 'weekday_column': 'weekday'},\n",
+       "                                                      'transform_func': 'get_wday_by_date'}]))])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline = data_preparation.build_pipeline(config=pipeline_config)\n",
+    "pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_data = data_preparation.run_pipeline(config=pipeline_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mprocessed_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhead\u001b[49m(\u001b[38;5;241m5\u001b[39m)\u001b[38;5;241m.\u001b[39mT\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'head'"
+     ]
+    }
+   ],
+   "source": [
+    "processed_data.head(5).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_data.describe().T"
    ]
   },
   {
