--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -4,36 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Minimal Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Create a baseline linear regression model using the originally provided training \n",
-    "dataset with minimal preprocessing and evaluate it with your validation dataset based on accuracies (MAE) and coefficient of determination (𝑅𝑅2)**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Imputation als Preprocessing, da weiteres Vorgehen ohne NaN Werte"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2 Baseline Linear Regression Model"
+    "## Setup"
    ]
   },
   {
@@ -45,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\doree\\AppData\\Local\\Temp\\ipykernel_24404\\2359398814.py:1: DeprecationWarning: \n",
+      "C:\\Users\\doree\\AppData\\Local\\Temp\\ipykernel_3296\\2359398814.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -83,8 +54,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1 Minimal Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Create a baseline linear regression model using the originally provided training \n",
+    "dataset with minimal preprocessing and evaluate it with your validation dataset based on accuracies (MAE) and coefficient of determination (𝑅𝑅2)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NaN Werte droppen als einfachste Methode, um mit fehlenden Werten umzugehen? Als Preprocessing notwendig, da weiteres Vorgehen nur ohne NaN Werte möglich ist\n",
+    "Imputation Strategien später als Alternative zu Verbesserung der Ergebnisse?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train = data_train.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2 Baseline Linear Regression Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3 Outlier Handling"
+    "## 3 Other Options for Missing Value Handling"
    ]
   },
   {
@@ -168,6 +178,22 @@
    "source": [
     "**Preprocess the original datasets to address the identified data quality issues e.g. Missing values, Outliers, Features to be transformed (e.g. normalization). Check the effect of each preprocessing step with your validation data set* building additional linear regression models**\n",
     "\n",
+    "Einfluss auf R2 und MAE prüfen\n",
+    "\n",
+    "Hier jetzt zum Beispiel verschiedene Imputation Strategien"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4 Outlier Handling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Einfluss auf R2 und MAE prüfen"
    ]
   },
@@ -175,21 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4 Feature Transformation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Einfluss auf R2 und MAE prüfen"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5 Other Options for Missing Value Handling"
+    "## 5 Feature Transformation"
    ]
   },
   {
