restructure dynaconf setup

--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from idstools._config import settings"
+    "from idstools._config import _idstools"
    ]
   },
   {
@@ -243,7 +243,7 @@
     }
    ],
    "source": [
-    "settings[\"data_explorer\"][\"input_file\"][\"path\"]"
+    "_idstools[\"default\"][\"data_explorer\"][\"DataExplorer\"][\"input_file\"][\"path\"]"
    ]
   },
   {
@@ -263,7 +263,7 @@
     }
    ],
    "source": [
-    "settings.data_explorer.input_file.path"
+    "_idstools.default.data_explorer.DataExplorer.input_file.path"
    ]
   },
   {
