--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -12,15 +12,17 @@
    "metadata": {},
    "source": [
     "# TODO:\n",
-    "    - head\n",
-    "    - info\n",
+    "    - head (/)\n",
+    "    - info (/)\n",
+    "    - matrix (missing values) (/)\n",
+    "    - bar (missing values) (/)\n",
+    "\n",
     "    - data dict (types, e.g. nominal, categorial)\n",
-    "    - matrix (missing values)\n",
-    "    - bar (missing values)\n",
     "    - box (numeric, deviation)\n",
     "    - bar/mosaic/ (categorial, deviation)\n",
     "    - predictor/feature correlation (heatmap/scatter)\n",
-    "    - histogram (skewed/deviation)\n"
+    "    - histogram (skewed/deviation)\n",
+    "    - imports Jupyter Notebook\n"
    ]
   },
   {
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,42 +230,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_idstools[\"default\"][\"data_explorer\"][\"DataExplorer\"][\"input_file\"][\"path\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_idstools.default.data_explorer.DataExplorer.input_file.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import idstools.data_explorer as idsde"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-31 19:40:35,105 [data_explorer] [INFO] - Initializing DataExplorer\n",
+      "2024-01-31 19:40:35,106 [_helpers] [INFO] - Reading csv file:\n",
+      "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\n",
+      "2024-01-31 19:40:35,109 [data_explorer] [INFO] - Using output path: /home/davidrmn/Studies/introduction-data-science/results\n",
+      "2024-01-31 19:40:35,110 [data_explorer] [INFO] - No pipeline specified. Using default pipeline.\n"
+     ]
     }
    ],
    "source": [
-    "_idstools.default.data_explorer.DataExplorer.input_file.path"
+    "mydataexplorer = idsde.DataExplorer(input_file={\"path\": \"/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\", \"type\": \"csv\", \"separator\": \";\"}, output_path=\"/home/davidrmn/Studies/introduction-data-science/results\")"
    ]
   },
   {
