--- a/project/task_1.ipynb
+++ b/project/task_1.ipynb
@@ -536,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mit Hilfe der folgenden Matrix ist schnell ersichtlich, in welchen Spalten und in welchem Umfang fehlende Werte vorliegen. Betroffen sind die Variablen \"season\" und \"hum\"."
+    "Mit Hilfe der folgenden Matrix ist schnell ersichtlich, in welchen Spalten und in welchem Umfang fehlende Werte vorliegen. Betroffen sind die Variablen `season` und `hum`."
    ]
   },
   {
