--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -72,8 +72,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NaN Werte droppen als einfachste Methode, um mit fehlenden Werten umzugehen? Als Preprocessing notwendig, da weiteres Vorgehen nur ohne NaN Werte möglich ist\n",
-    "Imputation Strategien später als Alternative zu Verbesserung der Ergebnisse?"
+    "Während unserer ersten Analysen in Task 1 ist uns aufgefallen, dass die Variablen `season` und `hum` fehlende Werte aufweisen. Als Default-Methode und im Sinne von Minimal Preprocessing sollen die Zeilen mit fehlenden Werten entfernt werden.\n",
+    "Optionale Methoden zum Umgang mit fehlenden Werten werden im weiteren Verlauf addressiert."
    ]
   },
   {
@@ -82,7 +82,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_train = data_train.dropna()"
+    "data_train = data_train.dropna()\n",
+    "# data_test = data_test.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Desweiteren sollen die Zeilen mit den negativen Werten bei `windspeed` entfernt werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "negative_rows_windspeed = data[data['windspeed'] < 0].index\n",
+    "\n",
+    "negative_rows_windspeed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train = data_train.drop(negative_rows_windspeed)\n",
+    "# auch hier für test?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Auch die Wochentage mit -1 werden bereinigt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_wday_by_date(row):\n",
+    "    if row[\"weekday\"] > 0:\n",
+    "        return row\n",
+    "    weekday_shift = { # week starts on Sunday in dataset\n",
+    "        6: 0,\n",
+    "        0: 1,\n",
+    "        1: 2,\n",
+    "        2: 3,\n",
+    "        3: 4,\n",
+    "        4: 5,\n",
+    "        5: 6\n",
+    "    }\n",
+    "    dateformat = \"%d.%m.%Y\"\n",
+    "    row[\"weekday\"] = weekday_shift[time.strptime(row[\"dteday\"], dateformat).tm_wday]\n",
+    "    return row\n",
+    "data_new = data_new.apply(get_wday_by_date, axis=1)"
    ]
   },
   {
@@ -187,6 +247,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Wie wir bereits in Task 1 erarbeitet haben, weisen die Spalten `season` und `hum` fehlende Werte auf. Im ersten Schritt haben wir diese Zeilen entfernt. Nun wollen wir die fehlenden Werte imputieren."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msno.matrix(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die fehlenden Werte in der Spalte `season` werden anhand des vorliegenden Datums in der entsprechenden Zeile aufgefüllt. \n",
+    "\n",
+    "`get_season_by_date` bestimmt die Jahreszeit anhand eines Datums im Format \"dd.mm\". Sie verwendet das Modul time, um feste Zeitpunkte für den Beginn der Jahreszeiten (Frühling, Sommer, Herbst, Winter) festzulegen und vergleicht dann das eingegebene Datum mit diesen Zeitpunkten. Die Funktion gibt eine Ganzzahl zurück, die die entsprechende Jahreszeit repräsentiert (1 für Frühling, 2 für Sommer, 3 für Herbst, 4 für Winter). Beachte jedoch, dass die Funktion Schwierigkeiten mit dem 29. Februar haben könnte, wenn keine Jahreszahl angegeben ist, da sie die Schaltjahre nicht berücksichtigt.\n",
+    "Es gibt vier fest definierte Zeitpunkte für den Beginn jeder Jahreszeit (Frühling, Sommer, Herbst, Winter). Diese Zeitpunkte sind auf den 20. März, 20. Juni, 20. September und 20. Dezember festgelegt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# datetime.datetime kann nicht mit 29. Feb umgehen, wenn keine Jahreszahl dabei ist\n",
+    "import time\n",
+    "def get_season_by_date(date: str):\n",
+    "    \"\"\"Derive season by date\"\"\"\n",
+    "    dateformat = \"%d.%m\"\n",
+    "\n",
+    "    # Season beginnings\n",
+    "    spring = time.strptime(\"20.03\", dateformat)\n",
+    "    summer = time.strptime(\"20.06\", dateformat)\n",
+    "    autumn = time.strptime(\"20.09\", dateformat)\n",
+    "    winter = time.strptime(\"20.12\", dateformat)\n",
+    "\n",
+    "    date_p = time.strptime(date[:5], dateformat)\n",
+    "\n",
+    "    if date_p < spring:\n",
+    "        return 1\n",
+    "    elif spring < date_p < summer:\n",
+    "        return 2\n",
+    "    elif summer < date_p < autumn:\n",
+    "        return 3\n",
+    "    elif autumn < date_p < winter:\n",
+    "        return 4\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def season_wrapper(row):\n",
+    "    row[\"season\"] = get_season_by_date(row[\"dteday\"])\n",
+    "    return row\n",
+    "data_new = data.apply(season_wrapper, axis=1)\n",
+    "data_new"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fehlende Werte in der Spalte `hum` werden durch den Mittelwert ersetzt. (Wir können über andere Ersetzungswerte noch diskutieren!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_new[\"hum\"].fillna(np.mean(data_new[\"hum\"]), inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msno.matrix(data_new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4 Outlier Handling"
    ]
   },
@@ -201,13 +357,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Es ist zu sehen, dass die Gesamtanzahl und die Zahl der nicht registrierten Nutzer einen sehr hohen Maximalwert haben. Die Gesamtzahl wird aus registrierten Nutzern + nicht registrierten Nutzern hergeleitet -> Die Outlier werden mittels der `casual` Spalte ermittelt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "zscores = stats.zscore(data_new[\"casual\"])\n",
+    "thresh = 3.0\n",
+    "outliers = data_new[abs(zscores) > thresh]\n",
+    "outliers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anschließend erfolgt die Entfernung dieser Werte."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_no_out = data_new.drop(outliers.index, errors=\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5 Feature Transformation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "One Hot Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_d = pd.concat([data_no_out, pd.get_dummies(data_no_out[\"weekday\"], prefix=\"weekday\", dtype=int)], axis=1)\n",
+    "data_d = pd.concat([data_d, pd.get_dummies(data_no_out[\"weathersit\"], prefix=\"weathersit\", dtype=int)], axis=1)\n",
+    "data_d.drop(columns=[\"weekday\", \"weathersit\"], inplace=True)"
+   ]
   },
   {
    "cell_type": "markdown",
