better input description

--- a/project/modeling-optimization.ipynb
+++ b/project/modeling-optimization.ipynb
@@ -10,7 +10,9 @@
     "    'path': '/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv',\n",
     "    'type': 'csv',\n",
     "    'separator': ';'\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "train_data = \"/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\""
    ]
   },
   {
@@ -53,17 +55,17 @@
      "data": {
       "text/plain": [
        "{'default': {'data_explorer': {'DataExplorer': {'output_path': 'results',\n",
-       "    'input_file': {'path': 'data/BikeRentalDaily_train.csv',\n",
-       "     'type': 'csv',\n",
-       "     'separator': ';'},\n",
+       "    'input_path': 'data/BikeRentalDaily_train.csv',\n",
+       "    'input_type': 'csv',\n",
+       "    'input_delimiter': ';',\n",
        "    'pipeline': {'descriptive_analysis': True,\n",
        "     'missing_value_matrix_plot': True,\n",
        "     'missing_value_bar_plot': True,\n",
        "     'correlation_heatmap_plot': True}}},\n",
        "  'data_preparation': {'DataPreparation': {'output_path': None,\n",
-       "    'input_file': {'path': 'data/BikeRentalDaily_train.csv',\n",
-       "     'type': 'csv',\n",
-       "     'separator': ';'},\n",
+       "    'input_path': 'data/BikeRentalDaily_train.csv',\n",
+       "    'input_type': 'csv',\n",
+       "    'input_delimiter': ';',\n",
        "    'pipeline': {'_SimpleImputer': [{'target': 'hum',\n",
        "       'config': {'strategy': 'mean'}}],\n",
        "     '_OneHotEncoder': [{'target': 'season',\n",
@@ -74,17 +76,17 @@
        "  'model_optimization': {'ModelOptimization': {'output_path': 'results',\n",
        "    'evaluation': {'metric': 'rmse', 'cv': 5}}}},\n",
        " 'custom': {'data_explorer': {'DataExplorer': {'output_path': 'results',\n",
-       "    'input_file': {'path': 'data/BikeRentalDaily_test.csv',\n",
-       "     'type': 'csv',\n",
-       "     'separator': ';'},\n",
+       "    'input_path': 'data/BikeRentalDaily_test.csv',\n",
+       "    'input_type': 'csv',\n",
+       "    'input_delimiter': ';',\n",
        "    'pipeline': {'descriptive_analysis': True,\n",
        "     'missing_value_matrix_plot': True,\n",
        "     'missing_value_bar_plot': True,\n",
        "     'correlation_heatmap_plot': True}}},\n",
        "  'data_preparation': {'DataPreparation': {'output_path': None,\n",
-       "    'input_file': {'path': 'data/BikeRentalDaily_test.csv',\n",
-       "     'type': 'csv',\n",
-       "     'separator': ';'},\n",
+       "    'input_path': 'data/BikeRentalDaily_test.csv',\n",
+       "    'input_type': 'csv',\n",
+       "    'input_delimiter': ';',\n",
        "    'pipeline': {'_FeatureDropper': [{'target': 'instant',\n",
        "       'config': {'axis': 1, 'errors': 'ignore'}},\n",
        "      {'target': 'hum', 'config': {'axis': 1, 'errors': 'ignore'}},\n",
@@ -120,16 +122,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-01 01:20:01,361 [data_preparation] [INFO] - Initializing DataPreparation\n",
-      "2024-02-01 01:20:01,363 [_helpers] [INFO] - Reading csv file:\n",
+      "2024-02-01 01:49:20,197 [data_preparation] [INFO] - Initializing DataPreparation\n",
+      "2024-02-01 01:49:20,199 [_helpers] [INFO] - Reading csv file:\n",
       "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\n",
-      "2024-02-01 01:20:01,366 [data_preparation] [INFO] - Using output path: /home/davidrmn/Studies/introduction-data-science/results/\n",
-      "2024-02-01 01:20:01,366 [data_preparation] [INFO] - Using pipeline: {}\n"
+      "2024-02-01 01:49:20,203 [data_preparation] [INFO] - Using output path: results\n",
+      "2024-02-01 01:49:20,204 [data_preparation] [INFO] - Using pipeline: {}\n"
      ]
     }
    ],
    "source": [
-    "prep = DataPreparation(input_file={'path': data['path'], 'type': data['type'], 'separator': data['separator']}, output_path='/home/davidrmn/Studies/introduction-data-science/results/')"
+    "prep = DataPreparation(input_path=train_data, output_path='results')"
    ]
   },
   {
@@ -214,7 +216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-01 01:20:05,054 [data_preparation] [INFO] - Pipeline created:\n",
+      "2024-02-01 01:49:20,232 [data_preparation] [INFO] - Pipeline created:\n",
       "Pipeline(steps=[('_FeatureDropper',\n",
       "                 _FeatureDropper(config=[{'config': {'axis': 1,\n",
       "                                                     'errors': 'ignore'},\n",
@@ -258,7 +260,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-01 01:20:06,363 [data_preparation] [INFO] - Pipeline step _FeatureDropper has been processed.\n"
+      "2024-02-01 01:49:20,241 [data_preparation] [INFO] - Pipeline step _FeatureDropper has been processed.\n"
      ]
     },
     {
@@ -1396,6 +1398,43 @@
    ],
    "source": [
     "prep.processed_data.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dteday              object\n",
+       "season             float64\n",
+       "yr                   int64\n",
+       "mnth                 int64\n",
+       "holiday              int64\n",
+       "weekday              int64\n",
+       "workingday           int64\n",
+       "weathersit           int64\n",
+       "temp               float64\n",
+       "atemp              float64\n",
+       "hum                float64\n",
+       "windspeed          float64\n",
+       "leaflets             int64\n",
+       "price reduction      int64\n",
+       "casual               int64\n",
+       "registered           int64\n",
+       "cnt                  int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prep.processed_data.dtypes"
    ]
   },
   {
