--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -65,16 +65,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-01 01:31:55,679 [data_explorer] [INFO] - Initializing DataExplorer\n",
-      "2024-02-01 01:31:55,682 [_helpers] [INFO] - Reading csv file:\n",
+      "2024-02-01 01:47:24,518 [data_explorer] [INFO] - Initializing DataExplorer\n",
+      "2024-02-01 01:47:24,520 [_helpers] [INFO] - Reading csv file:\n",
       "../data/BikeRentalDaily_train.csv\n",
-      "2024-02-01 01:31:55,686 [data_explorer] [INFO] - Using output path: results\n",
-      "2024-02-01 01:31:55,686 [data_explorer] [INFO] - Using pipeline: {}\n"
+      "2024-02-01 01:47:24,523 [data_explorer] [INFO] - Using output path: results\n",
+      "2024-02-01 01:47:24,524 [data_explorer] [INFO] - Using pipeline: {}\n"
      ]
     }
    ],
    "source": [
-    "data_explorer = idsde.DataExplorer(input_file=data_explorer_config, output_path=\"results\")"
+    "data_explorer = idsde.DataExplorer(input_path=train_data, output_path=\"results\")"
    ]
   },
   {
@@ -86,7 +86,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-01 01:31:57,344 [data_explorer] [INFO] - Head of BikeRentalDaily_train\n",
+      "2024-02-01 01:47:24,532 [data_explorer] [INFO] - Head of BikeRentalDaily_train\n",
       "                          0           1           2           3           4\n",
       "instant                 154         685         368         472         442\n",
       "dteday           03.06.2011  15.11.2012  03.01.2012  16.04.2012  17.03.2012\n",
@@ -107,7 +107,7 @@
       "registered             4414        5125        2147        5172        4681\n",
       "cnt                    5312        5445        2236        6370        7836\n",
       "\n",
-      "2024-02-01 01:31:57,349 [data_explorer] [INFO] - Info of BikeRentalDaily_train\n",
+      "2024-02-01 01:47:24,537 [data_explorer] [INFO] - Info of BikeRentalDaily_train\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 600 entries, 0 to 599\n",
       "Data columns (total 18 columns):\n",
@@ -134,7 +134,7 @@
       "dtypes: float64(5), int64(12), object(1)\n",
       "memory usage: 84.5+ KB\n",
       "\n",
-      "2024-02-01 01:31:57,351 [data_explorer] [INFO] - Types of BikeRentalDaily_train\n",
+      "2024-02-01 01:47:24,538 [data_explorer] [INFO] - Types of BikeRentalDaily_train\n",
       "instant              int64\n",
       "dteday              object\n",
       "season             float64\n",
@@ -155,7 +155,7 @@
       "cnt                  int64\n",
       "dtype: object\n",
       "\n",
-      "2024-02-01 01:31:57,367 [data_explorer] [INFO] - Description of BikeRentalDaily_train\n",
+      "2024-02-01 01:47:24,554 [data_explorer] [INFO] - Description of BikeRentalDaily_train\n",
       "                 count     mean      std     min      25%      50%      75%  \\\n",
       "instant          600.0   363.12   208.71    1.00   181.25   362.50   538.25   \n",
       "season           538.0     2.44     1.11    1.00     1.00     2.00     3.00   \n",
@@ -263,43 +263,26 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_preparation_config = {\n",
-    "    \"input_file\": {\n",
-    "        \"path\": train_data,\n",
-    "        \"type\": \"csv\",\n",
-    "        \"separator\": \";\"\n",
-    "    },\n",
-    "    \"output_path\": None,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-01 01:32:08,238 [data_preparation] [INFO] - Initializing DataPreparation\n",
-      "2024-02-01 01:32:08,239 [_helpers] [INFO] - Reading csv file:\n",
+      "2024-02-01 01:47:24,750 [data_preparation] [INFO] - Initializing DataPreparation\n",
+      "2024-02-01 01:47:24,751 [_helpers] [INFO] - Reading csv file:\n",
       "../data/BikeRentalDaily_train.csv\n",
-      "2024-02-01 01:32:08,243 [data_preparation] [INFO] - No output path specified.\n",
-      "Using default output path:/home/davidrmn/Studies/introduction-data-science/results\n",
-      "2024-02-01 01:32:08,243 [data_preparation] [INFO] - Using pipeline: {}\n"
+      "2024-02-01 01:47:24,754 [data_preparation] [INFO] - Using output path: results\n",
+      "2024-02-01 01:47:24,755 [data_preparation] [INFO] - Using pipeline: {}\n"
      ]
     }
    ],
    "source": [
-    "data_preparation = dp.DataPreparation(**data_preparation_config)\n"
+    "data_preparation = dp.DataPreparation(input_path=train_data, output_path=\"results\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,21 +339,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-01 01:32:11,014 [data_preparation] [INFO] - Pipeline created:\n",
+      "2024-02-01 01:47:24,768 [data_preparation] [INFO] - Pipeline created:\n",
       "Pipeline(steps=[('_SimpleImputer',\n",
       "                 _SimpleImputer(config=[{'config': {'strategy': 'mean'},\n",
       "                                         'target': 'hum'}])),\n",
       "                ('_GenericDataFrameTransformer',\n",
       "                 _GenericDataFrameTransformer(config=[{'config': {'date_column': 'dteday',\n",
       "                                                                  'weekday_column': 'weekday'},\n",
-      "                                                       'transform_func': <function get_wday_by_date at 0x7fda1f3cc0e0>}]))])\n"
+      "                                                       'transform_func': <function get_wday_by_date at 0x7f85f41b7f60>}]))])\n"
      ]
     },
     {
@@ -382,15 +365,15 @@
        "                (&#x27;_GenericDataFrameTransformer&#x27;,\n",
        "                 _GenericDataFrameTransformer(config=[{&#x27;config&#x27;: {&#x27;date_column&#x27;: &#x27;dteday&#x27;,\n",
        "                                                                  &#x27;weekday_column&#x27;: &#x27;weekday&#x27;},\n",
-       "                                                       &#x27;transform_func&#x27;: &lt;function get_wday_by_date at 0x7fda1f3cc0e0&gt;}]))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;_SimpleImputer&#x27;,\n",
+       "                                                       &#x27;transform_func&#x27;: &lt;function get_wday_by_date at 0x7f85f41b7f60&gt;}]))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;_SimpleImputer&#x27;,\n",
        "                 _SimpleImputer(config=[{&#x27;config&#x27;: {&#x27;strategy&#x27;: &#x27;mean&#x27;},\n",
        "                                         &#x27;target&#x27;: &#x27;hum&#x27;}])),\n",
        "                (&#x27;_GenericDataFrameTransformer&#x27;,\n",
        "                 _GenericDataFrameTransformer(config=[{&#x27;config&#x27;: {&#x27;date_column&#x27;: &#x27;dteday&#x27;,\n",
        "                                                                  &#x27;weekday_column&#x27;: &#x27;weekday&#x27;},\n",
-       "                                                       &#x27;transform_func&#x27;: &lt;function get_wday_by_date at 0x7fda1f3cc0e0&gt;}]))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">_SimpleImputer</label><div class=\"sk-toggleable__content\"><pre>_SimpleImputer(config=[{&#x27;config&#x27;: {&#x27;strategy&#x27;: &#x27;mean&#x27;}, &#x27;target&#x27;: &#x27;hum&#x27;}])</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">_GenericDataFrameTransformer</label><div class=\"sk-toggleable__content\"><pre>_GenericDataFrameTransformer(config=[{&#x27;config&#x27;: {&#x27;date_column&#x27;: &#x27;dteday&#x27;,\n",
+       "                                                       &#x27;transform_func&#x27;: &lt;function get_wday_by_date at 0x7f85f41b7f60&gt;}]))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">_SimpleImputer</label><div class=\"sk-toggleable__content\"><pre>_SimpleImputer(config=[{&#x27;config&#x27;: {&#x27;strategy&#x27;: &#x27;mean&#x27;}, &#x27;target&#x27;: &#x27;hum&#x27;}])</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">_GenericDataFrameTransformer</label><div class=\"sk-toggleable__content\"><pre>_GenericDataFrameTransformer(config=[{&#x27;config&#x27;: {&#x27;date_column&#x27;: &#x27;dteday&#x27;,\n",
        "                                                 &#x27;weekday_column&#x27;: &#x27;weekday&#x27;},\n",
-       "                                      &#x27;transform_func&#x27;: &lt;function get_wday_by_date at 0x7fda1f3cc0e0&gt;}])</pre></div></div></div></div></div></div></div>"
+       "                                      &#x27;transform_func&#x27;: &lt;function get_wday_by_date at 0x7f85f41b7f60&gt;}])</pre></div></div></div></div></div></div></div>"
       ],
       "text/plain": [
        "Pipeline(steps=[('_SimpleImputer',\n",
@@ -399,10 +382,10 @@
        "                ('_GenericDataFrameTransformer',\n",
        "                 _GenericDataFrameTransformer(config=[{'config': {'date_column': 'dteday',\n",
        "                                                                  'weekday_column': 'weekday'},\n",
-       "                                                       'transform_func': <function get_wday_by_date at 0x7fda1f3cc0e0>}]))])"
+       "                                                       'transform_func': <function get_wday_by_date at 0x7f85f41b7f60>}]))])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,15 +397,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-01 01:32:12,057 [data_preparation] [INFO] - Pipeline step _SimpleImputer has been processed.\n",
-      "2024-02-01 01:32:12,060 [data_preparation] [INFO] - Pipeline step _GenericDataFrameTransformer has been processed.\n"
+      "2024-02-01 01:47:24,779 [data_preparation] [INFO] - Pipeline step _SimpleImputer has been processed.\n",
+      "2024-02-01 01:47:24,782 [data_preparation] [INFO] - Pipeline step _GenericDataFrameTransformer has been processed.\n"
      ]
     }
    ],
@@ -432,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +637,7 @@
        "cnt                             2236                 6370                 7836  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +947,7 @@
        "cnt                           5909.5              53021.0  3588.75  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,11 +958,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from idstools._config import _idstools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data/BikeRentalDaily_train.csv'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_idstools[\"default\"][\"data_explorer\"][\"DataExplorer\"][\"input_path\"]"
    ]
   },
   {
@@ -999,57 +1002,7 @@
     }
    ],
    "source": [
-    "_idstools[\"default\"][\"data_explorer\"][\"DataExplorer\"][\"input_file\"][\"path\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'data/BikeRentalDaily_train.csv'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "_idstools.default.data_explorer.DataExplorer.input_file.path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import idstools.data_explorer as idsde"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-02-01 01:32:18,846 [data_explorer] [INFO] - Initializing DataExplorer\n",
-      "2024-02-01 01:32:18,848 [_helpers] [INFO] - Reading csv file:\n",
-      "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\n",
-      "2024-02-01 01:32:18,851 [data_explorer] [INFO] - Using output path: /home/davidrmn/Studies/introduction-data-science/results\n",
-      "2024-02-01 01:32:18,851 [data_explorer] [INFO] - Using pipeline: {}\n"
-     ]
-    }
-   ],
-   "source": [
-    "mydataexplorer = idsde.DataExplorer(input_file={\"path\": \"/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\", \"type\": \"csv\", \"separator\": \";\"}, output_path=\"/home/davidrmn/Studies/introduction-data-science/results\")"
+    "_idstools.default.data_explorer.DataExplorer.input_path"
    ]
   }
  ],
