--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -23,10 +23,7 @@
     "#import idstools\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import missingno as msno\n",
-    "import altair as alt\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score, mean_absolute_error\n",
@@ -77,7 +74,7 @@
    "metadata": {},
    "source": [
     "**Create a baseline linear regression model using the originally provided training \n",
-    "dataset with minimal preprocessing and evaluate it with your validation dataset based on accuracies (MAE) and coefficient of determination (𝑅𝑅2)**"
+    "dataset with minimal preprocessing and evaluate it with your validation dataset based on accuracies (MAE) and coefficient of determination (𝑅²)**"
    ]
   },
   {
