--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Exploration"
+    "# Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- new variable unregistered (cnt - registered)"
    ]
   },
   {
@@ -1533,9 +1540,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "introduction-data-science",
    "language": "python",
-   "name": "python3"
+   "name": "introduction-data-science"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1547,7 +1554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
