finalized functionallity for task1 as part of the idstools package

--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -20,10 +20,10 @@
     "    - fix plot resolution (/)\n",
     "    - box (numeric, deviation) (/)\n",
     "    - histogram (skewed/deviation) (/)\n",
+    "    - predictor/feature correlation (heatmap/scatter) (/)\n",
     "\n",
     "    - data dict (types, e.g. nominal, categorial)\n",
-    "    - bar/mosaic/ (categorial, deviation)\n",
-    "    - predictor/feature correlation (heatmap/scatter)\n"
+    "    - bar/mosaic (categorial, deviation)\n"
    ]
   },
   {
