--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -23,7 +23,8 @@
     "    - predictor/feature correlation (heatmap/scatter) (/)\n",
     "\n",
     "    - data dict (types, e.g. nominal, categorial)\n",
-    "    - bar/mosaic (categorial, deviation)\n"
+    "    - bar/mosaic (categorial, deviation)\n",
+    "    -> These require some mapping based on domain knowledge.\n"
    ]
   },
   {
