--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -22,8 +22,8 @@
     "    - histogram (skewed/deviation) (/)\n",
     "    - predictor/feature correlation (heatmap/scatter) (/)\n",
     "\n",
-    "    - data dict (types, e.g. nominal, categorial)\n",
-    "    - bar/mosaic (categorial, deviation)\n",
+    "    - data dict (types, e.g. nominal, categorial) -> provided by user!\n",
+    "    - bar/mosaic (categorial, deviation) -> custom transfromer to change dtype based on data dict.\n",
     "    -> These require some mapping based on domain knowledge.\n"
    ]
   },
